# job-hunter-agent

./: .env.example  .gitignore  Makefile  README.md  WEEK1_BACKLOG_COMPLETED.md  pyproject.toml
config/: policy.yaml  profile.yaml  writing_rules.yaml
ops/: job_hunter.cron
scripts/: init_db.py  install_cron.sh  run_daily.sh
sql/: 001_init.sql
src/job_hunter_agent/: __init__.py  auto_submit.py  config.py  dashboard.py  db.py  eligibility.py  export.py  main.py  models.py  policy_engine.py  reporting.py  repository.py  salary_policy.py  scoring.py  secrets.py  sources.py  status.py  types.py
src/job_hunter_agent/writing/: __init__.py  lint.py  templates.py
tests/: test_auto_submit.py  test_eligibility.py  test_policy_engine.py  test_scoring.py  test_writing_lint.py
