[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter-agent"
version = "0.1.0"
description = "Relocation-first job sourcing and application automation toolkit."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
job-hunter-agent = "job_hunter_agent.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
